--- a/Query/package.json
+++ b/Query/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
