--- a/Query/package.json
+++ b/Query/package.json
@@ -12,11 +12,13 @@
   "author": "Jbagur",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "http": "0.0.0",
     "https": "^1.0.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "promise": "^8.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
