--- a/Exclusions/package.json
+++ b/Exclusions/package.json
@@ -4,7 +4,7 @@
   "description": "Microservicio de Matching",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./dev/server.js"
+    "dev": "node ./dev/server.js"
   },
   "keywords": [
     "Microservicio"
@@ -17,9 +17,6 @@
     "mysql": "^2.16.0"
   },
   "devDependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "mysql": "^2.16.0",
     "nodemon": "^1.18.4"
   }
 }
