--- a/Pricing/package.json
+++ b/Pricing/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "pricing",
+  "name": "matching",
   "version": "0.0.1",
-  "description": "Microservicio de Exclusions",
+  "description": "Microservicio de Matching",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./dev/server.js"
+    "dev": "node ./dev/server.js"
   },
   "keywords": [
-    "Microservicio de Pricing"
+    "Microservicio"
   ],
   "author": "Jbagur",
   "license": "ISC",
@@ -17,9 +17,6 @@
     "mysql": "^2.16.0"
   },
   "devDependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "mysql": "^2.16.0",
     "nodemon": "^1.18.4"
   }
 }
