--- a/Query/package.json
+++ b/Query/package.json
@@ -4,7 +4,7 @@
   "description": "Microservicio de Matching",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./dev/server.js"
+    "dev": "node ./dev/server.js"
   },
   "keywords": [
     "Microservicio"
@@ -12,13 +12,9 @@
   "author": "Jbagur",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "http": "0.0.0",
-    "https": "^1.0.0",
-    "mysql": "^2.16.0",
-    "promise": "^8.0.1"
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
